--- a/.gitignore
+++ b/.gitignore
@@ -2070,3 +2070,4 @@ node_modules/util/README.md
 node_modules/util/util.js
 node_modules/util/support/isBuffer.js
 node_modules/util/support/isBufferBrowser.js
+node_modules
