--- a/package.json
+++ b/package.json
@@ -1,5 +1,52 @@
 {
   "dependencies": {
-    "phaser": "^3.55.2"
+    "phaser": "^3.60.0"
+  },
+  "name": "ob-chain-reaction",
+  "description": "Chain Reaction\r This is a browser-based game of Chain Reaction created using the Phaser game development library.",
+  "version": "0.0.1",
+  "main": "chainreact2.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RickF71/ob-chain-reaction.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RickF71/ob-chain-reaction/issues"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
+  "homepage": "https://github.com/RickF71/ob-chain-reaction#readme",
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@types/node": "^20.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.0.0-alpha.10",
+    "json-loader": "^0.5.7",
+    "prettier": "^2.8.8",
+    "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.7",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   }
 }
